--- a/public/css/app.css
+++ b/public/css/app.css
@@ -70,7 +70,7 @@ body {
   line-height: 1.6;
   color: #212529;
   text-align: left;
-  background-color: #f8fafc;
+  background-color: #eee;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -509,7 +509,7 @@ mark,
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #f8fafc;
+  background-color: #eee;
   border: 1px solid #dee2e6;
   border-radius: 0.25rem;
   max-width: 100%;
@@ -4238,15 +4238,15 @@ input[type="button"].btn-block {
 }
 
 .custom-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.2rem rgba(0, 83, 86, 0.25);
+  box-shadow: 0 0 0 1px #eee, 0 0 0 0.2rem rgba(0, 83, 86, 0.25);
 }
 
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.2rem rgba(0, 83, 86, 0.25);
+  box-shadow: 0 0 0 1px #eee, 0 0 0 0.2rem rgba(0, 83, 86, 0.25);
 }
 
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.2rem rgba(0, 83, 86, 0.25);
+  box-shadow: 0 0 0 1px #eee, 0 0 0 0.2rem rgba(0, 83, 86, 0.25);
 }
 
 .custom-range::-moz-focus-outer {
@@ -4452,8 +4452,8 @@ input[type="button"].btn-block {
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
   color: #495057;
-  background-color: #f8fafc;
-  border-color: #dee2e6 #dee2e6 #f8fafc;
+  background-color: #eee;
+  border-color: #dee2e6 #dee2e6 #eee;
 }
 
 .nav-tabs .dropdown-menu {
@@ -10923,388 +10923,41 @@ body {
   color: white;
 }
 
-body {
-  position: relative;
-  overflow-x: hidden;
-  background-color: #CFD8DC;
+.sidebar {
+  background-color: lightgray;
+  width: 15%;
+  height: 500px;
+  float: left;
+  margin: 20px;
 }
 
-body,
-html {
-  height: 100%;
+.content {
+  border: 2px solid black;
+  float: right;
+  margin: 20px;
+  margin-left: 2px;
+  width: 80%;
 }
 
-.nav .open > a,
-.nav .open > a:hover,
-.nav .open > a:focus {
-  background-color: transparent;
-}
-
-/*-------------------------------*/
-
-/*           Wrappers            */
-
-/*-------------------------------*/
-
-#wrapper {
-  padding-left: 0;
-  transition: all 0.5s ease;
-}
-
-#wrapper.toggled {
-  padding-left: 220px;
-}
-
-#sidebar-wrapper {
-  z-index: 1000;
-  left: 220px;
-  width: 0;
-  height: 100%;
-  margin-left: -220px;
-  overflow-y: auto;
-  overflow-x: hidden;
-  background: #1a1a1a;
-  transition: all 0.5s ease;
-}
-
-#sidebar-wrapper::-webkit-scrollbar {
-  display: none;
-}
-
-#wrapper.toggled #sidebar-wrapper {
-  width: 220px;
-}
-
-#page-content-wrapper {
-  width: 100%;
-  padding-top: 70px;
-}
-
-#wrapper.toggled #page-content-wrapper {
-  position: absolute;
-  margin-right: -220px;
-}
-
-/*-------------------------------*/
-
-/*     Sidebar nav styles        */
-
-/*-------------------------------*/
-
-.navbar {
-  padding: 0;
-}
-
-.sidebar-nav {
-  position: absolute;
-  top: 0;
-  width: 220px;
+.main2 {
+  list-style-type: none;
   margin: 0;
   padding: 0;
-  list-style: none;
+  width: 200px;
+  background-color: lightgray;
 }
 
-.sidebar-nav li {
-  position: relative;
-  line-height: 20px;
-  display: inline-block;
-  width: 100%;
-}
-
-.sidebar-nav li:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  height: 100%;
-  width: 3px;
-  background-color: #1c1c1c;
-  transition: width .2s ease-in;
-}
-
-.sidebar-nav li:hover {
-  background: skyblue !important;
-  border-radius: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-.sidebar-nav li:hover:before,
-.sidebar-nav li.open:hover:before {
-  width: 100%;
-  transition: width .2s ease-in;
-}
-
-.sidebar-nav li a {
+li a {
   display: block;
-  color: #ddd;
-  text-decoration: none;
-  padding: 10px 15px 10px 30px;
-}
-
-.sidebar-nav li a:hover,
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus,
-.sidebar-nav li.open a:hover,
-.sidebar-nav li.open a:active,
-.sidebar-nav li.open a:focus {
-  color: #fff;
-  text-decoration: none;
-  background-color: transparent;
-}
-
-.sidebar-header {
-  text-align: center;
-  font-size: 20px;
-  position: relative;
-  width: 100%;
-  display: inline-block;
-}
-
-.sidebar-brand {
-  height: 65px;
-  position: relative;
-  background: #212531;
-  background: linear-gradient(to right bottom, #2f3441 50%, #212531 50%);
-  padding-top: 1em;
-}
-
-.sidebar-brand a {
-  color: #ddd;
-}
-
-.sidebar-brand a:hover {
-  color: #fff;
+  color: #000;
+  padding: 8px 16px;
   text-decoration: none;
 }
 
-.dropdown-header {
-  text-align: center;
-  font-size: 1em;
-  color: #ddd;
-  background: #212531;
-  background: linear-gradient(to right bottom, #2f3441 50%, #212531 50%);
+/* Change the link color on hover */
+
+li a:hover {
+  background-color: #555;
+  color: white;
 }
-
-.sidebar-nav .dropdown-menu {
-  position: relative;
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  border-radius: 0;
-  border: none;
-  background-color: #222;
-  box-shadow: none;
-}
-
-.dropdown-menu.show {
-  top: 0;
-}
-
-/*Fontawesome icons*/
-
-.nav.sidebar-nav li a::before {
-  font-family: fontawesome;
-  content: "\F12E";
-  vertical-align: baseline;
-  display: inline-block;
-  padding-right: 5px;
-}
-
-a[href*="#home"]::before {
-  content: "\F015" !important;
-}
-
-a[href*="#about"]::before {
-  content: "\F129" !important;
-}
-
-a[href*="#events"]::before {
-  content: "\F073" !important;
-}
-
-a[href*="#events"]::before {
-  content: "\F073" !important;
-}
-
-a[href*="#team"]::before {
-  content: "\F0C0" !important;
-}
-
-a[href*="#works"]::before {
-  content: "\F0B1" !important;
-}
-
-a[href*="#pictures"]::before {
-  content: "\F03E" !important;
-}
-
-a[href*="#videos"]::before {
-  content: "\F03D" !important;
-}
-
-a[href*="#books"]::before {
-  content: "\F02D" !important;
-}
-
-a[href*="#art"]::before {
-  content: "\F1FC" !important;
-}
-
-a[href*="#awards"]::before {
-  content: "\F02E" !important;
-}
-
-a[href*="#services"]::before {
-  content: "\F013" !important;
-}
-
-a[href*="#contact"]::before {
-  content: "\F086" !important;
-}
-
-a[href*="#followme"]::before {
-  content: "\F099" !important;
-  color: #0084b4;
-}
-
-/*-------------------------------*/
-
-/*       Hamburger-Cross         */
-
-/*-------------------------------*/
-
-.hamburger {
-  position: fixed;
-  top: 20px;
-  z-index: 999;
-  display: block;
-  width: 32px;
-  height: 32px;
-  margin-left: 15px;
-  background: transparent;
-  border: none;
-}
-
-.hamburger:hover,
-.hamburger:focus,
-.hamburger:active {
-  outline: none;
-}
-
-.hamburger.is-closed:before {
-  content: '';
-  display: block;
-  width: 100px;
-  font-size: 14px;
-  color: #fff;
-  line-height: 32px;
-  text-align: center;
-  opacity: 0;
-  -webkit-transform: translate3d(0, 0, 0);
-  -webkit-transition: all .35s ease-in-out;
-}
-
-.hamburger.is-closed:hover:before {
-  opacity: 1;
-  display: block;
-  -webkit-transform: translate3d(-100px, 0, 0);
-  -webkit-transition: all .35s ease-in-out;
-}
-
-.hamburger.is-closed .hamb-top,
-.hamburger.is-closed .hamb-middle,
-.hamburger.is-closed .hamb-bottom,
-.hamburger.is-open .hamb-top,
-.hamburger.is-open .hamb-middle,
-.hamburger.is-open .hamb-bottom {
-  position: absolute;
-  left: 0;
-  height: 4px;
-  width: 100%;
-}
-
-.hamburger.is-closed .hamb-top,
-.hamburger.is-closed .hamb-middle,
-.hamburger.is-closed .hamb-bottom {
-  background-color: #1a1a1a;
-}
-
-.hamburger.is-closed .hamb-top {
-  top: 5px;
-  -webkit-transition: all .35s ease-in-out;
-}
-
-.hamburger.is-closed .hamb-middle {
-  top: 50%;
-  margin-top: -2px;
-}
-
-.hamburger.is-closed .hamb-bottom {
-  bottom: 5px;
-  -webkit-transition: all .35s ease-in-out;
-}
-
-.hamburger.is-closed:hover .hamb-top {
-  top: 0;
-  -webkit-transition: all .35s ease-in-out;
-}
-
-.hamburger.is-closed:hover .hamb-bottom {
-  bottom: 0;
-  -webkit-transition: all .35s ease-in-out;
-}
-
-.hamburger.is-open .hamb-top,
-.hamburger.is-open .hamb-middle,
-.hamburger.is-open .hamb-bottom {
-  background-color: #1a1a1a;
-}
-
-.hamburger.is-open .hamb-top,
-.hamburger.is-open .hamb-bottom {
-  top: 50%;
-  margin-top: -2px;
-}
-
-.hamburger.is-open .hamb-top {
-  -webkit-transform: rotate(45deg);
-  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.73, 1, 0.28, 0.08);
-}
-
-.hamburger.is-open .hamb-middle {
-  display: none;
-}
-
-.hamburger.is-open .hamb-bottom {
-  -webkit-transform: rotate(-45deg);
-  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.73, 1, 0.28, 0.08);
-}
-
-.hamburger.is-open:before {
-  content: '';
-  display: block;
-  width: 100px;
-  font-size: 14px;
-  color: #fff;
-  line-height: 32px;
-  text-align: center;
-  opacity: 0;
-  -webkit-transform: translate3d(0, 0, 0);
-  -webkit-transition: all .35s ease-in-out;
-}
-
-.hamburger.is-open:hover:before {
-  opacity: 1;
-  display: block;
-  -webkit-transform: translate3d(-100px, 0, 0);
-  -webkit-transition: all .35s ease-in-out;
-}
-
-/*-------------------------------*/
-
-/*            Overlay            */
-
-/*-------------------------------*/
 
