--- a/resources/sass/_naves.scss
+++ b/resources/sass/_naves.scss
@@ -19,3 +19,44 @@ body{
                     }
 }
 
+
+
+.sidebar{
+  
+    background-color: lightgray;
+    width: 15%;
+    height: 500px;
+    float: left;
+    margin: 20px;
+}
+
+.content{
+    border: 2px solid black;
+    float: right;
+    margin: 20px;
+    margin-left: 2px;
+    width: 80%;
+}
+
+
+.main2 {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color:  lightgray;
+  }
+  
+  li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+  
+  /* Change the link color on hover */
+  li a:hover {
+    background-color: #555;
+    color: white;
+  }
+  
